<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phone</string>
    <string name="language">English</string>
    <string name="menu_exit">Sign out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_guide">Tutorial</string>
    <string name="menu_query">Query</string>
    <string name="menu_add">Add Contact</string>
    <string name="menu_modify">Modify Contact</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_all_contact_list">Show All Contact</string>
    <string name="menu_qt_contact_list">Show QT Contact</string>
    <string name="qt_menu_modify">Modify Contact</string>
    <string name="button_text_add">Add New</string>
    <string name="button_text_update">Update</string>
    <string name="add_contact_alert_dialog_title">Please input new contact name</string>
    <string name="add_contact_alert_dialog_save">Save</string>
    <string name="add_contact_alert_dialog_cancel">Cancel</string>
    <string name="add_contact_alert_dialog_invalid_name">Invalid User!</string>
    <string name="update_contact_alert_dialog_title">Update Contact ?</string>
    <string name="update_contact_alert_dialog_yes">Yes</string>
    <string name="update_contact_alert_dialog_no">No</string>
    <string name="add_contact_alert_dialog_account_exists">Account already exists.</string>
    <string name="sr2_enter">Enter SR2</string>
    <string name="sr2_exit">Exit SR2</string>
    <string name="broadcast">Broadcast</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="head_nurse">Head nurse</string>
    <string name="patient">Patient</string>
    <string name="cleaner">Janitor</string>
    <string name="family">Patient family</string>
    <string name="secreatary">Clerk</string>
    <string name="nurse_station">Nurse station</string>
    <string name="offline">Offline</string>
    <string name="all_station_broadcast">Broadcast to all</string>
    <string name="miss_call_notification">(missed call)</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="logining">Logging in</string>
    <string name="receive_bye">Call ended</string>
    <string name="receive_busy">Number busy</string>
    <string name="no_response">Unanswered</string>
    <string name="received_tts">Received broadcast (TTS)</string>
    <string name="received_ptt">Received broadcast (PTT)</string>
    <string name="received_incoming">Received call</string>
    <string name="sent_tts">Broadcast (TTS)</string>
    <string name="sent_ptt">Broadcast (PTT)</string>
    <string name="made_outgoing">Outgoing call</string>
    <string name="missed_tts">Missed broadcast (TTS)</string>
    <string name="missed_call">Missed call</string>
    <string name="loading_phonebook_fail">Unable to load phonebook</string>
    <string name="without_internet">Unable to connect to internet</string>
    <string name="leave_hospital">Patient discharged</string>
    <string name="change_shift">Shift change</string>
    <string name="broadcast_ptt_fail">Broadcast failed (PTT)</string>
    <string name="ptt_connecting">Broadcast connecting (PTT)</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="close">Close</string>
    <string name="push_to_talk">Push to talk</string>
    <string name="warming_with_no_tts">The preset broadcasting messages are unavailable, please contact MIS, or use "Push-to-talk" to send a broadcast.</string>
    <string name="warming_disconnect_msg">The phone function is currently unavailable due to network problem. We are trying to reconnect, please check your internet connection or contact MIS for assistance.</string>
    <string name="error_code">Error code</string>
    <string name="busy_network">Network is currently busy</string>
    <string name="retry_msg">Retrying…</string>
    <string name="lowbandwidth">Network unstable</string>
    <string name="all_nurse">All nurses</string>
    <string name="all_nurse_broadcast">Push "Start" to talk</string>
    <string name="success_send_tts">Broadcast successful (TTS)</string>
    <string name="fail_send_tts">Broadcast failed (TTS)</string>
    <string name="fail_send_ptt">Broadcast failed (PTT)</string>
    <string name="tts_sending">Sending broadcast (TTS)</string>
    <string name="broadcast_on_nss">Broadcast</string>
    <string name="contacts">Contacts</string>
    <string name="call_history">History</string>
    <string name="insession"></string>
    <string name="broadcasting">Broadcasting</string>
    <string name="calling">Calling</string>
    <string name="incoming">Incoming call</string>
    <string name="end_call">End call</string>
    <string name="end_ptt">End broadcast</string>
    <string name="accept_video_call">Video</string>
    <string name="accept_voice_call">Voice</string>
    <string name="cancel_call">Decline</string>
    <string name="switch_to_video">Video</string>
    <string name="close_speaker">Speaker</string>
    <string name="open_speaker">Speaker</string>
    <string name="request_switch_to_video">has requested to initiate a video call</string>
    <string name="waiting_response">Waiting for response</string>
    <string name="tts_msg">Broadcast (TTS)</string>
    <string name="patient_app_title">Phone</string>
    <string name="nss_title_patient">Patients</string>
    <string name="keypad">Keypad</string>
    <string name="dial">Dial</string>
	<string name="collapse">Collapse</string>
	<string name="phone_number">Telephone number</string>
    <string name="preview_broadcast">Preview broadcast</string>
    <string name="user_profile">User profile</string>
    <string name="ptt">Push to Talk</string>
    <string name="no_available_broadcast_agent">No available broadcast agent</string>
    <string name="department_during_broadcasting">Another broadcast in progress</string>
    <string name="permission_request_dialog_title">Permission Request</string>
    <string name="permission_request_dialog_content">This app needs permission to access certain features. Please grant permissions now.</string>
    <string name="not_granted_permission">Not granted permission(s):</string>
</resources>